# tree-sitter-molviewtree

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  sample.tree  setup.py  tree-sitter.json  wiki.view.tree
bindings/c/: tree-sitter-molviewtree.h  tree-sitter-molviewtree.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_molviewtree/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMolViewTreeTests/: TreeSitterMolViewTreeTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
